--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -1,3 +1,23 @@
+#aboutme {
+    padding-top: 0.3em;
+    background: url('../background.jpg') #fff no-repeat fixed 0 -100px;
+    background-size: cover;
+    min-height: 400px;
+}
+
+#aboutme h1 {
+    padding-left: 1em;
+    color: #eee;
+    font-size: 3em;
+}
+
+#aboutme img {
+    border-radius: 25%;
+    width: 10vw;
+    min-width: 200px;
+    margin-left: 3em;
+}
+
 .chapter {
     padding: 0 1em 1.5em 1em;
     border-bottom: 1px solid #ccc;
@@ -7,16 +27,61 @@
     padding-top: 1.2em;
 }
 
-#aboutme {
-    padding-top: 2em;
+.center {
+    text-align: center;
 }
 
-.top-bar-section ul li:hover {
+footer {
+    color: #fff;
+    padding-top: 1em;
+    background-color: #333333;
+}
+
+footer a {
+    color: #ccc;
+}
+
+footer a:hover {
+    color: #fff;
+}
+
+.inline-nav {
+    margin-top: 0.5em;
+}
+
+.inline-nav ul {
+    display: inline-flex;
+    list-style-type: none;
+}
+
+.inline-nav ul li {
+    padding-left: 1em;
+    font-size: 0.8em;
+}
+
+.top-bar-section ul li:hover > a {
     background-color: #008CBA !important;
+    background: #008CBA;
 }
 
-@media screen and (max-width: 836px) {
-    .chapter h1 {
-        padding-top: 2em;
+@media screen and (max-width: 390px) {
+    #aboutme h1 {
+        color: #000;
+        font-weight: bold;
+    }
+
+    #aboutme img {
+        width: 40vw;
+    }
+
+    #aboutme {
+        min-height: 500px;
+    }
+}
+
+@media screen and (min-width: 390px) and (max-width: 990px) {
+    #aboutme h1 {
+        color: #eee;
+        font-weight: bold;
     }
 }
