--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -2,6 +2,11 @@ body {
     font-family: 'Open Sans', sans-serif;
 }
 
+#container {
+    width: 960px;
+    margin: 0 auto;
+}
+
 #aboutme {
     padding-top: 3.3em;
     background: url('../images/background.jpg') #fff no-repeat fixed 0 -100px;
