--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -157,3 +157,9 @@ footer a:hover {
         display: none;
     }
 }
+
+@media screen and (max-width: 960px) {
+    #container {
+        width: 100%;
+    }
+}
