--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -9,8 +9,6 @@ body, h1, h2, h3, h4, h5, h6, p, li, table, label, div, a {
 
 #aboutme {
     padding-top: 3.3em;
-    background: url('../images/background.jpg') #fff no-repeat fixed 0 -100px;
-    background-size: cover;
     min-height: 400px;
 }
 
@@ -21,11 +19,16 @@ body, h1, h2, h3, h4, h5, h6, p, li, table, label, div, a {
     text-shadow: -1px -1px 3px rgba(0, 0, 0, 1);
 }
 
-#aboutme img {
+#profilepicture {
     border-radius: 50%;
     width: 10vw;
     min-width: 200px;
     box-shadow: 0px 0px 10px 3px #000;
+    margin-top: 4em;
+}
+
+#logo img {
+    width: 80%;
 }
 
 .additionalInfoOnRequest {
@@ -139,14 +142,6 @@ footer a:hover {
 }
 
 @media screen and (max-width: 391px) {
-    #aboutme img {
-        width: 40vw;
-    }
-
-    #aboutme {
-        min-height: 500px;
-    }
-
     .inline-nav {
         display: none;
     }
