--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -140,6 +140,17 @@ footer a:hover {
     background: #008CBA;
 }
 
+#languageselector {
+    text-align: center;
+    font-size: 1.5em;
+    margin-top: 2em;
+}
+
+#languageselector select {
+    margin-top: 1em;
+    max-width: 400px;
+}
+
 @media screen and (min-width: 1024px) {
     .inline-nav {
         display: none;
