--- a/app/presentations/mozillaCH-why-should-you-use-firefox/theme/css/default.css
+++ b/app/presentations/mozillaCH-why-should-you-use-firefox/theme/css/default.css
@@ -1669,3 +1669,16 @@ pre[data-lang]::after {
     font-family: 'Fira Mono', monospace;
   }
 }
+
+.slideside {
+  position: absolute;
+  top: 100px;
+  right: 75px;
+  height: 500px;
+  width: auto;
+}
+
+.blue ul {
+  color: #fff;
+  list-style-type: none;
+}
