about mozilla added to Berlin intro talk

--- a/app/presentations/mozweekend-berlin-2015-intro/theme/scss/default.scss
+++ b/app/presentations/mozweekend-berlin-2015-intro/theme/scss/default.scss
@@ -1036,3 +1036,57 @@ aside.gdbar {
     font-family: monospace !important;
   }
 }
+
+p {
+  font-size: 2em;
+}
+
+.manifest-1 {
+  background-color: #00A0DB;
+  color: $brand-white;
+}
+
+.manifest-2 {
+  background-color: #DD5A00;
+  color: $brand-white;
+}
+
+.manifest-3 {
+  background-color: #689F2A;
+  color: $brand-white;
+}
+
+.manifest-4 {
+  background-color: #4B5C66;
+  color: $brand-white;
+}
+
+.manifest-5 {
+  background-color: #A52D2D;
+  color: $brand-white;
+}
+
+.manifest-6 {
+  background-color: #00A0DB;
+  color: $brand-white;
+}
+
+.manifest-7 {
+  background-color: #DD5A00;
+  color: $brand-white;
+}
+
+.manifest-8 {
+  background-color: #689F2A;
+  color: $brand-white;
+}
+
+.manifest-9 {
+  background-color: #4B5C66;
+  color: $brand-white;
+}
+
+.manifest-10 {
+  background-color: #A52D2D;
+  color: $brand-white;
+}
